Updated Web page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         text-align: center;
       }
     </style>
+    <link rel="stylesheet" href="indexstyle.css">
+    <script difer src="app.js"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.0/uicons-brands/css/uicons-brands.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -59,7 +61,7 @@
           <div class="d-flex  flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
                 <pre></pre> 
-                <p style="
+                  <p  style="
                     background: linear-gradient(135deg, #19b2bd, #4224b1); 
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
@@ -109,6 +111,7 @@
     <div class="container" id="header">
         <div class="row" style="font-family: Courier Prime;">
             <div class="col-sm-5"><br>
+              <section>
                 <img style="width: 70%; border-radius: 62px;" src="IMG/Glove.jpg" alt="Profile" class="float-md-end">
                 <br>
             </div>
@@ -132,7 +135,20 @@
                 <div class="card-body ">
                     <h5 class="card-title">Hirusha</h5>
                     <p class="card-text">Leader</p>
-                    <a href="https://gojoker.github.io/Project-1/" class="btn btn-primary">View Profile</a>
+                    <button class="button" style="background: linear-gradient(135deg, #b57fda, #36a0dd)">
+                      <p class="text">Follow me</p>
+                      <svg
+                        viewBox="0 0 16 16"
+                        fill="currentColor"
+                        height="16"
+                        width="16"
+                        class="svg"
+                      >
+                        <path
+                          d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                        ></path>
+                      </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -142,7 +158,20 @@
                 <div class="card-body">
                     <h5 class="card-title">Nesanda</h5>
                     <p class="card-text">Developer</p>
-                    <a href="https://github.com/GOJOKER/Java-Pro-1.git" class="btn btn-primary">View Profile</a>
+                    <button class="button" style="background: linear-gradient(135deg, #b57fda, #36a0dd)">
+                      <p class="text">Follow me</p>
+                      <svg
+                        viewBox="0 0 16 16"
+                        fill="currentColor"
+                        height="16"
+                        width="16"
+                        class="svg"
+                      >
+                        <path
+                          d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                        ></path>
+                      </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -152,7 +181,20 @@
                 <div class="card-body">
                     <h5 class="card-title">Samuduni</h5>
                     <p class="card-text">Project Manger</p>
-                    <a href="https://gojoker.github.io/2024.05.29/" class="btn btn-primary">View Profile</a>
+                    <button class="button" style="background: linear-gradient(135deg, #b57fda, #36a0dd)">
+                      <p class="text">Follow me</p>
+                      <svg
+                        viewBox="0 0 16 16"
+                        fill="currentColor"
+                        height="16"
+                        width="16"
+                        class="svg"
+                      >
+                        <path
+                          d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                        ></path>
+                      </svg>
+                    </button>
                 </div>
             </div>
         </div>
@@ -162,7 +204,20 @@
                 <div class="card-body">
                     <h5 class="card-title">Inuki</h5>
                     <p class="card-text">Developer</p>
-                    <a href="https://gojoker.github.io/2024.05.29/" class="btn btn-primary">View Profile</a>
+                    <button class="button" style="background: linear-gradient(135deg, #b57fda, #36a0dd)">
+                      <p class="text">Follow me</p>
+                      <svg
+                        viewBox="0 0 16 16"
+                        fill="currentColor"
+                        height="16"
+                        width="16"
+                        class="svg"
+                      >
+                        <path
+                          d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                        ></path>
+                      </svg>
+                    </button>
                 </div>
             </div>
         </div>
