--- a/speech2.html
+++ b/speech2.html
@@ -70,16 +70,41 @@
 
         // Send selected mode to ESP via WebSocket
         function selectMode(mode) {
-            socket.send(mode);
-            if(mode==1){
-                window.location.href = './speech.html';
-            }else if(mode==2){
-                window.location.href = './speech2.html';
-            }else{
-                window.location.href = './index.html';
+          if (socket && socket.readyState === WebSocket.OPEN) {
+            socket.send(mode.toString());
+            console.log(`Mode ${mode} sent to ESP`);
+
+            // Navigation logic based on mode
+            const currentPath = window.location.pathname;
+
+            // Navigation logic based on mode
+            if (mode == 1 && currentPath !== '/speech.html') {
+              socket.send(0);
+              window.location.href = './speech.html';
+            } else if (mode == 2 && currentPath !== '/speech2.html') {
+              window.location.href = './speech2.html';
+            } else if (mode == 3) {
+              console.log("Checkbox is checked! Mode 3 sent.");
+            } else if (mode == 0) {
+              console.log("Checkbox is unchecked! Mode 0 sent.");
+            } else {
+              window.location.href = './index.html';
             }
+          } else {
+            console.error("WebSocket is not ready. Cannot send mode.");
+          }
+        }
+
+        function handleClick() {
+          const checkbox = document.getElementById("checkbox");
+          if (checkbox.checked) {
+            selectMode(2);
+          } else {
+            selectMode(0);
+          }
         }
     </script>
+    <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.0/uicons-brands/css/uicons-brands.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -177,6 +202,16 @@
     <br><br><br>
     <div class="container text-center">
 
+      <div class="container_switch">
+        <input id="checkbox" type="checkbox" onclick="handleClick()"/>
+        <label class="switch" for="checkbox">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="slider">
+            <path
+              d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V256c0 17.7 14.3 32 32 32s32-14.3 32-32V32zM143.5 120.6c13.6-11.3 15.4-31.5 4.1-45.1s-31.5-15.4-45.1-4.1C49.7 115.4 16 181.8 16 256c0 132.5 107.5 240 240 240s240-107.5 240-240c0-74.2-33.8-140.6-86.6-184.6c-13.6-11.3-33.8-9.4-45.1 4.1s-9.4 33.8 4.1 45.1c38.9 32.3 63.5 81 63.5 135.4c0 97.2-78.8 176-176 176s-176-78.8-176-176c0-54.4 24.7-103.1 63.5-135.4z"
+            ></path>
+          </svg>
+        </label>
+      </div>
     <h2 class="cool-heading-blue">Modes</h2>
 
       <style>
