--- a/speech.html
+++ b/speech.html
@@ -32,10 +32,7 @@
             "Tilt Backward": "./mp3/TiltBackward.mp3",
             "Flat": "./mp3/Flat.mp3",
             "Upside Down": "./mp3/UpsideDown.mp3",
-            "Neutral": "",
-            "Mistake": "./mp3/Flat.mp3",
-            "Name": "./mp3/UpsideDown.mp3",
-            "Please": "./mp3/Neutral.mp3"
+            "Neutral": "./mp3/Neutral.mp3",
         };
 
         let lastDirection = '';  // To store the last direction
@@ -386,14 +383,14 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <script>
-         // Simulate direction change for testing
-         function simulateDirectionChange() {
-            const directions = ["Tilt Right", "Tilt Left", "Tilt Forward", "Tilt Backward", "Flat", "Upside Down", "Neutral", "Mistake", "Name", "Please"];
-            const randomDirection = directions[Math.floor(Math.random() * directions.length)];
-            if (randomDirection !== lastDirection) {
-                updateDirection(randomDirection);
-            }
-        }
+      // Simulate direction change for testing
+      function simulateDirectionChange() {
+         const directions = ["Tilt Right", "Tilt Left", "Tilt Forward", "Tilt Backward", "Flat", "Upside Down", "Neutral"];
+         const randomDirection = directions[Math.floor(Math.random() * directions.length)];
+         if (randomDirection !== lastDirection) {
+             updateDirection(randomDirection);
+         }
+     }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
