--- a/speech2.html
+++ b/speech2.html
@@ -27,7 +27,7 @@
     
     <script>
         const audioFiles = {
-            "Good bye": "./mp3/Gestures/Good bye.mp3",
+            "Good Bye": "./mp3/Gestures/Good bye.mp3",
             "Hello": "./mp3/Gestures/Hello.mp3",
             "I am": "./mp3/Gestures/I am.mp3",
             "I": "./mp3/Gestures/I.mp3",
@@ -39,11 +39,10 @@
             "Thirsty": "./mp3/Gestures/Thirsty.mp3",
             "Water": "./mp3/Gestures/Water.mp3",
             "Yes": "./mp3/Gestures/Yes.mp3",
-            "Fuck you": "./mp3/Fuck you.mp3",
         };
 
         let lastDirection = '';  // To store the last direction
-        const socket = new WebSocket('ws://192.168.52.104/ws'); // Replace with your ESP's IP
+        const socket = new WebSocket('ws://192.168.140.104/ws'); // Replace with your ESP's IP
 
         socket.onopen = function(event) {
             console.log('Connected to WebSocket server.');
@@ -387,7 +386,7 @@
     <script>
       // Simulate direction change for testing
       function simulateDirectionChange() {
-         const directions = ["Good bye","Hello","I am","I","Need","No","Please","Sorry","Thank you","Thirsty","Water","Yes","Fuck you"];
+         const directions = ["Good bye","Hello","I am","I","Need","No","Please","Sorry","Thank you","Thirsty","Water","Yes"];
          const randomDirection = directions[Math.floor(Math.random() * directions.length)];
          if (randomDirection !== lastDirection) {
              updateDirection(randomDirection);
